@@ -2015,10 +2015,10 @@ bool Mob::Rampage()
 void Mob::AreaRampage()
 {
 	int index_hit = 0;
-	if (!IsPet()) {
-		entity_list.MessageClose_StringID(this, true, 200, MT_NPCRampage, NPC_RAMPAGE, GetCleanName());
+	if (!IsPet()) { // do not know every pet AA so thought it safer to add this
+		entity_list.MessageClose_StringID(this, true, 200, MT_NPCRampage, AE_RAMPAGE, GetCleanName());
 	} else {
-		entity_list.MessageClose_StringID(this, true, 200, MT_PetFlurry, NPC_RAMPAGE, GetCleanName());
+		entity_list.MessageClose_StringID(this, true, 200, MT_PetFlurry, AE_RAMPAGE, GetCleanName());
 	}
 	index_hit = hate_list.AreaRampage(this, GetTarget());
 
